Configuración de vercel.json y ajustes en el proyecto

--- a/html/index.html
+++ b/html/index.html
@@ -18,19 +18,21 @@
     <a href="https://www.instagram.com/steven._.castro_/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
   </div>
   
-  <!-- Navbar -->
-  <nav class="navbar container">
-    <div class="logo">&lt;Freddysticas&gt;</div>
-    <div class="nav-links">
-      <a href="#home">Inicio</a>
-      <a href="#about">Sobre mí</a>
-      <a href="#skills">Habilidades</a>
-      <a href="#projects">Proyectos</a>
-      <a href="#resume">CV</a>
-      <a href="#contact">Contacto</a>
-    </div>
-  </nav>
-  
+<!-- Navbar -->
+<nav class="navbar container">
+  <div class="logo">&lt;Freddysticas&gt;</div>
+  <div class="menu-toggle" id="mobile-menu">
+    <i class="fas fa-bars"></i>  <!-- Assuming you're using Font Awesome -->
+  </div>
+  <div class="nav-links" id="nav-links">
+    <a href="#home">Inicio</a>
+    <a href="#about">Sobre mí</a>
+    <a href="#skills">Habilidades</a>
+    <a href="#projects">Proyectos</a>
+    <a href="#resume">CV</a>
+    <a href="#contact">Contacto</a>
+  </div>
+</nav>
   <!-- Sección de héroe -->
   <section id="home" class="hero">
     <div class="particles">
