--- a/html/index.html
+++ b/html/index.html
@@ -210,7 +210,7 @@
             </div>
             <div class="project-links">
               <a href="https://github.com/FREDDYSTICAS/Web-Truchashop.git" target="_blank" title="Ver código"><i class="fab fa-github"></i></a>
-              <a href="https://web-freddy.vercel.app/" target="_blank" title="Ver demo"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://web-truchashop.onrender.com" target="_blank" title="Ver demo"><i class="fas fa-external-link-alt"></i></a>
             </div>
           </div>
         </div>
